--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* base styles */
 :root {
-  --primary: #166ae8;
+  --primary: #64a7f5;
 }
 body {
   padding: 0;
   margin: 0 20px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Montserrat', 'Quicksand', sans-serif;
   color: #444;
   background: #f2f2f2;
 }
@@ -18,6 +19,8 @@ a {
 .container {
   max-width: 960px;
   margin: 0 auto;
+  /* position: sticky; */
+  /* top: 30px; */
 }
 
 /* navbar */
@@ -25,6 +28,7 @@ nav {
   margin: 20px auto 40px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 nav h1 {
   margin-left: 10px;
@@ -36,12 +40,12 @@ nav ul {
 }
 nav li {
   display: inline-block;
-  margin-left: 16px;
+  margin: 5px 5px 5px 16px;
 }
 nav li.btn {
-  padding: 10px 16px;
+  padding: 5px 8px;
   border: 2px solid var(--primary);
-  border-radius: 30px;
+  border-radius: 5px;
   font-weight: 600;
   color: var(--primary);
   cursor: pointer;
@@ -54,4 +58,9 @@ nav li.btn:hover {
 /* banner */
 .banner img {
   border-radius: 6px;
+}
+
+.logo {
+  width: 300px;
+  height: auto;
 }
