--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -15,13 +15,16 @@
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0);
   }
   .player {
-    display: flex;
-    justify-self: center;
-    // align-items: center;
-    margin: 0 auto;
-    width: 100%;
-    height: 400px;
     border: 1px solid #000000;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    audio {
+      width: 100%;
+    }
   }
   .releases {
     display: grid;
