--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -1,5 +1,8 @@
+@use './colors.scss' as *;
+@use './utils.scss' as *;
+
 .music {
-  max-width: 760px;
+  max-width: 800px;
   margin: 40px auto;
   letter-spacing: 1px;
   line-height: 1.6em;
@@ -7,15 +10,12 @@
     line-height: initial;
   }
   h2 {
-    display: inline-block;
-    margin: 0;
-    margin-top: 30px;
-    padding: 5px 10px;
-    border: 1px solid #000000;
-    border-bottom: 1px solid rgba($color: #000000, $alpha: 0);
+    display: block;
+    margin: 30px auto;
+    text-align: center;
+    font-size: 2rem;
   }
   .player {
-    border: 1px solid #000000;
     display: flex;
     flex-direction: column;
     justify-self: center;
@@ -26,24 +26,51 @@
       width: 100%;
     }
   }
-  .releases {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 10px;
-    .album {
-      border: 1px solid #000000;
-      padding: 20px 0;
-      h3 {
-        text-align: center;
-      }
-      img {
-        width: 100%;
-      }
-      ol {
-        list-style-position: inside;
-        margin: 0;
-        // padding: 0;
-      }
-    }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 50px auto;
+  @media screen and (max-width: 940px) {
+    grid-template-columns: auto;
+  }
+}
+
+.album {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1rem;
+  &__cover {
+    box-shadow: $shadow-4;
+    transform: translate(-4px, -4px);
+    max-width: 400px;
+    width: 400px;
+    height: auto;
+  }
+  &__title {
+    font-size: 2.5rem;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: -2px;
+    overflow: hidden;
+  }
+  p {
+    margin: 0;
+    padding: 0;
+  }
+  &__tracks {
+    list-style-position: inside;
+    margin: 0;
+    padding: 1rem;
   }
 }
