--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -1,5 +1,20 @@
 @use './colors.scss' as *;
 
-$shadow-4: 0.5px 0.5px 0 0 $dark, 1px 1px 0 0 $dark, 1.5px 1.5px 0 0 $dark,
-  2px 2px 0 0 $dark, 2.5px 2.5px 0 0 $dark, 3px 3px 0 0 $dark,
-  3.5px 3.5px 0 0 $dark, 4px 4px 0 0 $dark;
+// prettier-ignore
+$shadow-8:
+  0.5px 0.5px 0 0 $gray,
+  1px 1px 0 0 $gray,
+  1.5px 1.5px 0 0 $gray,
+  2px 2px 0 0 $gray,
+  2.5px 2.5px 0 0 $gray,
+  3px 3px 0 0 $gray,
+  3.5px 3.5px 0 0 $gray,
+  4px 4px 0 0 $gray,
+  4.5px 4.5px 0 0 $gray,
+  5px 5px 0 0 $gray,
+  5.5px 5.5px 0 0 $gray,
+  6px 6px 0 0 $gray,
+  6.5px 6.5px 0 0 $gray,
+  7px 7px 0 0 $gray,
+  7.5px 7.5px 0 0 $gray,
+  8px 8px 0 0 $gray;
