--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -24,6 +24,10 @@
     height: auto;
   }
 
+  a:hover {
+    border: none;
+  }
+
   ul {
     margin: 0;
     list-style-type: none;
@@ -34,14 +38,4 @@
       margin: 5px 5px 5px 16px;
     }
   }
-}
-
-.burger {
-  border: none;
-  outline: none;
-  padding: 10px 20px;
-  background: $dark;
-  color: $light;
-  cursor: pointer;
-  border-radius: 6px;
 }
