chore: Add meta tags, fix SEO link, add colors

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,5 +1,6 @@
 $light: #f7f7f7;
-$primary-blue: #64a7f5;
 $dark: #3b3b3b;
 $gray: #5c5c5c;
 $light-gray: #c4c4c4;
+$primary-blue: #64a7f5;
+$primary-red: #fe7272;
