--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -52,21 +52,21 @@
     max-width: 400px;
     width: 400px;
     height: auto;
-    transition: 0.3s;
-    &:hover {
-      box-shadow: $shadow-8;
-      transform: translate(-4px, -4px);
-    }
+    // transition: 0.3s;
+    // &:hover {
+    //   box-shadow: $shadow-8;
+    //   transform: translate(-4px, -4px);
+    // }
   }
   &__title {
     font-size: 2.5rem;
     text-align: center;
     padding: 1.5rem;
+    padding-bottom: 0.5rem;
     margin: 0;
     text-transform: uppercase;
     font-weight: 300;
     letter-spacing: -2px;
-    overflow: hidden;
   }
   p {
     margin: 0;
