--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -18,3 +18,19 @@ $shadow-8:
   7px 7px 0 0 $gray,
   7.5px 7.5px 0 0 $gray,
   8px 8px 0 0 $gray;
+
+.card {
+  background: white;
+  padding: 10px 20px;
+  border-radius: 6px;
+  margin: 20px auto;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.card h3 {
+  margin-bottom: 0;
+}
+
+.card h4 {
+  margin-top: 0;
+  color: #777;
+}
