--- a/styles/SocialMenu.module.scss
+++ b/styles/SocialMenu.module.scss
@@ -1,27 +1,31 @@
 @use './colors.scss' as *;
 
-$width: 60px;
+$width: 40px;
 
 .social {
   display: flex;
   justify-content: space-between;
+  max-width: 500px;
   width: 100%;
-  margin: 3rem 0;
+  margin: 3rem auto;
   @media screen and (max-width: 600px) {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   }
 }
 
 .social__container {
   width: $width;
   height: $width;
-  background: $primary-red;
+  // background: $primary-red;
   border-radius: $width / 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1rem 0;
+  // margin: 1rem 0;
   a {
     display: flex;
     justify-content: center;
@@ -41,9 +45,9 @@ $width: 60px;
       border-bottom: none;
     }
   }
-  &:hover {
-    box-shadow: 3px 3px 0 0 $dark;
-    border-radius: $width / 2;
-    transition: 0.2s;
-  }
+  // &:hover {
+  //   box-shadow: 3px 3px 0 0 $dark;
+  //   border-radius: $width / 2;
+  //   transition: 0.2s;
+  // }
 }
