--- a/styles/SocialMenu.module.scss
+++ b/styles/SocialMenu.module.scss
@@ -3,29 +3,27 @@
 $width: 40px;
 
 .social {
-  display: flex;
-  justify-content: space-between;
-  max-width: 500px;
-  width: 100%;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+  grid-gap: 10px;
+  justify-content: space-evenly;
   margin: 3rem auto;
-  @media screen and (max-width: 600px) {
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  max-width: 800px;
+  width: 100%;
+  @media screen and (max-width: 400px) {
+    display: flex;
+    grid-gap: 0;
   }
 }
 
 .social__container {
-  width: $width;
+  width: 100%;
   height: $width;
-  // background: $primary-red;
   border-radius: $width / 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  // margin: 1rem 0;
   a {
     display: flex;
     justify-content: center;
@@ -36,18 +34,17 @@ $width: 40px;
     height: 100%;
     svg {
       display: block;
-      fill: $dark;
       width: 60%;
       height: 60%;
       border-radius: inherit;
+      fill: $primary-red;
+      transition: 0.3s;
+      &:hover {
+        fill: $primary-blue;
+      }
     }
     &:hover {
       border-bottom: none;
     }
   }
-  // &:hover {
-  //   box-shadow: 3px 3px 0 0 $dark;
-  //   border-radius: $width / 2;
-  //   transition: 0.2s;
-  // }
 }
