refactor: Fix minor layout issues
Adds responsive sizing to album art and nav on mobile.

Resolves (#13)

--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -50,7 +50,7 @@
   &__cover {
     border-radius: 6px;
     max-width: 400px;
-    width: 400px;
+    width: 100%;
     height: auto;
     // transition: 0.3s;
     // &:hover {
