--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 1rem;
   &__cover {
     border-radius: 6px;
     max-width: 400px;
@@ -22,8 +21,13 @@
     padding: 1.5rem 0.5rem 0.5rem 0.5rem;
     text-align: center;
     text-transform: uppercase;
-    font-size: clamp(1.5rem, 15vw, 2rem);
+    font-size: clamp(1.5rem, 15vw, 2.4rem);
     font-weight: 800;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
   p {
     margin: 0;
@@ -39,10 +43,12 @@
     outline: none;
     border-radius: 6px;
     border: 1px solid $gray;
-    background-color: $light;
+    background-color: $primary-blue;
+    color: $light;
     font-size: initial;
+    font-weight: 600;
     transition: 0.1s;
-    padding: 0.5rem;
+    padding: 0.5rem 1.5rem;
     margin: 0.5rem;
     &:hover {
       border: 1px solid $dark;
