--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -6,12 +6,22 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  &__cover {
+  &__coverWrapper {
     border-radius: 6px;
+    overflow: hidden;
     max-width: 400px;
-    width: 100%;
     max-height: 400px;
     height: auto;
+    width: 100%;
+    .album__cover {
+      transition: transform 10s;
+      border-radius: 6px;
+      height: 100%;
+      width: 100%;
+      &:hover {
+        transform: scale(1.3);
+      }
+    }
   }
   &__title {
     font-weight: 300;
