--- a/components/MusicPlayer/MusicPlayer.module.scss
+++ b/components/MusicPlayer/MusicPlayer.module.scss
@@ -2,20 +2,49 @@
 
 .player {
   display: flex;
-  flex-direction: column;
   justify-self: center;
+  align-items: center;
+  gap: 10px;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
+  max-width: 800px;
   width: 100%;
-  audio {
+  // background: $dark;
+  color: $primary-red;
+  font-weight: 400;
+  letter-spacing: -4px;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  // padding: 1rem;
+  & .trackInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 10px;
+    h3 {
+      margin: 0;
+      padding: 0;
+      font-size: inherit;
+    }
+    h4 {
+      display: flex;
+      justify-content: space-between;
+      font-size: inherit;
+      margin: 0;
+      padding: 0;
+      color: $dark;
+      letter-spacing: -1px;
+      font-weight: lighter;
+      font-size: 1rem;
+      width: 100%;
+      .year {
+        font-weight: 900;
+      }
+    }
+  }
+  & audio {
+    display: flex;
     width: 100%;
   }
-}
-
-.BandCampPlayer {
-  border: 1px solid $dark;
-  border-radius: 6px;
-  height: 600px;
-  max-width: 300px;
-  overflow: hidden;
 }
