feat(NewMusicPlayer): Add functional player, styles

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-weight: 400;
+  letter-spacing: -1px;
+
+  text-transform: uppercase;
   @media screen and (max-width: 940px) {
     flex-direction: column;
   }
