--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,6 +1,13 @@
 $light: #f7f7f7;
-$dark: #3b3b3b;
+$dark: rgb(59, 59, 59);
 $gray: #5c5c5c;
 $light-gray: #c4c4c4;
 $primary-blue: #64a7f5;
 $primary-red: #fe7272;
+
+$button-primary: #ac92ec;
+$button-primary: #fe7272;
+$button-info: #4fc1e9;
+$button-warning: #ef5350;
+$button-success: #84de84;
+$button-disabled: #bdbdbd;
