--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,4 +29,7 @@ a {
   margin: 30px auto;
   text-align: center;
   font-size: 3.5rem;
+  text-transform: uppercase;
+  letter-spacing: -4px;
+  font-weight: 400;
 }
