--- a/components/MusicPlayer/MusicPlayer.module.scss
+++ b/components/MusicPlayer/MusicPlayer.module.scss
@@ -1,64 +1,173 @@
 @use 'colors' as *;
 
-.MusicPlayer {
+.player {
+  align-items: center;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  max-width: 800px;
-  border-radius: 6px;
-  border: 1px solid $dark;
-  padding: 1rem;
+  justify-content: center;
   margin: 0 auto;
-  &__albumTitle {
-    text-transform: uppercase;
-    letter-spacing: -2px;
+  max-width: 700px;
+  padding: 1rem;
+  .buttons {
+    display: flex;
+    justify-content: space-evenly;
+    justify-items: stretch;
+    gap: 10px;
+    h3 {
+      background: $primary-red;
+      border-radius: 6px;
+      border: 2px solid $primary-red;
+      color: $light;
+      font-family: 'Montserrat';
+      font-weight: 600;
+      outline: none;
+      font-size: 1rem;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      text-transform: uppercase;
+      font-weight: 700;
+      text-align: center;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .buttons {
+      flex-direction: column;
+      gap: 0;
+      width: 100%;
+    }
   }
 }
 
-.player {
-  display: flex;
-  justify-self: center;
+.player_grid {
   align-items: center;
+  display: grid;
   gap: 10px;
-  margin: 0 auto;
-  text-align: left;
-  max-width: 800px;
-  width: 100%;
-  // background: $dark;
-  color: $primary-red;
-  font-weight: 400;
-  letter-spacing: -4px;
-  font-size: 1.8rem;
-  text-transform: uppercase;
-  // padding: 1rem;
-  & .trackInfo {
+  grid-template-columns: minmax(auto-fit, 400px) auto;
+  grid-template-rows: auto 40px auto auto;
+  grid-template-areas:
+    'header header'
+    'audio audio'
+    'art tracks'
+    'art tracks';
+  padding: 2rem auto;
+  .header {
+    align-items: center;
+    background: $dark;
+    border-radius: 6px;
+    box-shadow: inset -5px 5px 20px 0 black;
+    color: $light;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding: 10px;
-    h3 {
-      margin: 0;
-      padding: 0;
-      font-size: inherit;
+    gap: 5px;
+    grid-area: header;
+    height: 60px;
+    justify-content: center;
+    line-height: initial;
+    margin: 0;
+    overflow-x: scroll;
+    padding: 0 10px;
+    white-space: nowrap;
+    width: 700px;
+    span {
+      color: $primary-red;
+      text-overflow: clip;
     }
-    h4 {
-      display: flex;
-      justify-content: space-between;
-      font-size: inherit;
-      margin: 0;
-      padding: 0;
-      color: $dark;
-      letter-spacing: -1px;
-      font-weight: lighter;
-      font-size: 1rem;
+  }
+  .audio {
+    border-radius: 6px;
+    display: block;
+    grid-area: audio;
+    margin: 0;
+    object-fit: contain;
+    padding: 0;
+    width: 100%;
+  }
+  .art {
+    border-radius: 10px;
+    grid-area: art;
+    justify-content: center;
+    max-width: 400px;
+    text-align: center;
+    img {
+      border-radius: 10px;
+      border: 1px solid $dark;
+      display: block;
+      height: auto;
       width: 100%;
-      .year {
-        font-weight: 900;
+    }
+    .art_caption {
+      align-items: center;
+      display: flex;
+      font-size: 1rem;
+      font-weight: 600;
+      justify-content: center;
+      padding: 0.5rem;
+      text-transform: uppercase;
+      a {
+        color: inherit;
+        &:hover {
+          border-bottom: none;
+        }
       }
     }
   }
-  & audio {
+  .tracks {
+    align-items: stretch;
+    align-self: stretch;
+    cursor: pointer;
     display: flex;
-    width: 100%;
+    flex-direction: column;
+    grid-area: tracks;
+    grid-row: 3/5;
+    justify-content: space-evenly;
+    list-style-type: none;
+    margin: 0;
+    max-width: 250px;
+    padding: 0;
+    li {
+      border-radius: 6px;
+      margin: 0;
+      padding: 5px;
+      transition: 0.1s;
+      // white-space: nowrap;
+      &:hover {
+        background: $primary-red;
+        color: $dark;
+      }
+    }
+  }
+  @media screen and (max-width: 800px) {
+    grid-template-columns: auto;
+    grid-template-rows: auto 40px auto auto;
+    grid-template-areas:
+      'header'
+      'audio'
+      'art'
+      'tracks';
+    overflow: scroll;
+    .header {
+      justify-content: flex-start;
+      width: 100%;
+    }
+    .art {
+      max-width: 100%;
+    }
+    .tracks {
+      grid-row: 4/5;
+      max-width: 200px;
+      li {
+        white-space: initial;
+      }
+    }
+  }
+  @media screen and (max-width: 400px) {
+    .header {
+      font-size: 1rem;
+    }
+    .tracks {
+      li {
+        padding: 0 5px;
+      }
+    }
   }
 }
