--- a/components/MusicPlayer/MusicPlayer.module.scss
+++ b/components/MusicPlayer/MusicPlayer.module.scss
@@ -104,6 +104,7 @@
       border: 1px solid $dark;
       display: block;
       height: auto;
+      object-fit: contain;
       width: 100%;
     }
     .art_caption {
