--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -31,16 +31,17 @@
   a:hover {
     border: none;
   }
+}
 
-  ul {
-    margin: 0;
-    list-style-type: none;
-    padding: 0;
-    display: flex;
+.menu {
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 
-    li {
-      display: inline-block;
-      margin: 8px 8px 8px 16px;
-    }
+  li {
+    display: inline-block;
+    margin: 8px 8px 8px 16px;
   }
 }
