--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,9 +8,10 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   padding: 0;
-  margin: 0 20px;
+  margin: 0;
   font-family: 'Montserrat', 'Quicksand', sans-serif;
   color: #444;
   background: $light;
