--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,8 +8,8 @@
   box-sizing: border-box;
 }
 
-body,
-html {
+html,
+body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', 'Quicksand', sans-serif;
