--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -14,6 +14,13 @@
   padding: 0.5rem 1rem;
   text-transform: uppercase;
   transition: 0.2s;
+  a {
+    color: inherit;
+    border-bottom: none;
+    &:hover {
+      border-bottom: none;
+    }
+  }
   &:hover {
     background: scale-color($color, $lightness: -10%);
     border: 2px solid scale-color($color, $lightness: -10%);
