--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,6 @@ a {
   text-align: center;
   font-size: 3.5rem;
   text-transform: uppercase;
-  letter-spacing: -4px;
+  // letter-spacing: -4px;
   font-weight: 400;
 }
